# balls-physics

./: CMakeLists.txt  README.md  cmd.txt  main.cpp  prog
lib/: CMakeLists.txt  ball.cpp  collision.cpp  collision.h  collision_test.cpp
lib/include/: ball.h  collision.h  renderer.h
lib/tests/: CMakeLists.txt  collision_test.cpp
